[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
faster_paths  = { git = "https://github.com/christianstaib/faster_paths.git" }
osm_converter = { git = "https://github.com/christianstaib/osm_converter.git" }

serde_json = "1.0"
serde = "1.0.192"
warp = "0.3"
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"

